* bibliography str; + divisibility and primes

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -138,11 +138,12 @@
 
 % Bibliography
 % Bibliography (https://www.contextgarden.net/Bibliography_mkiv)
-\usebtxdataset[../bib.bib]
-\usebtxdataset[../Itô.bib]
-\usebtxdataset[../Kuo-integral.bib]
-\usebtxdataset[../large-deviations.bib]
-\usebtxdataset[../combinatorics.bib]
+\usebtxdataset[../bibliographies/default.bib]
+\usebtxdataset[../bibliographies/number-theory.bib]
+\usebtxdataset[../bibliographies/combinatorics.bib]
+\usebtxdataset[../bibliographies/Itô.bib]
+\usebtxdataset[../bibliographies/Kuo-integral.bib]
+\usebtxdataset[../bibliographies/large-deviations.bib]
 \usebtxdefinitions[apa]    % apa or aps
 % Use \cite[short][#key] to get XXX19 type citations
 
