--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -1,10 +1,36 @@
+% Version and mode
+\setvariables [document] [version=final]    % {final, concept, temporary}
+\setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
+
+% Colors
+% https://coolors.co/app
+\setvariables [document] [color-link-external=royalblue]
+\setvariables [document] [color-link-internal=violetred]
+\setvariables [document] [color-background-0=white]
+\setvariables [document] [color-background-1=mistyrose]
+\setvariables [document] [color-background-2=whitesmoke]
+\setvariables [document] [color-foreground-0=deepskyblue4]
+\setvariables [document] [color-foreground-1=firebrick4]
+\setvariables [document] [color-foreground-2=darkslategray]
+
+% Fonts
+% Options: palatino, xitsbidi, euler
+\setvariables [document] [font=palatino]
+\setvariables [document] [fontsize-presentation=38pt]
+\setvariables [document] [fontsize-document=12pt]
+
+% Information
+\setvariables [document] [title={A generalization of stochastic integrals and its applications to large deviations theory}]
+\setvariables [document] [subtitle={General examination presentation}]
+\setvariables [document] [author={Sudip Sinha}]
+\setvariables [document] [date={2019-04-05}]
+\setvariables [document] [keyword={mathematics, probability, stochastic, integral, calculus, large deviations, applications}]
+
+% Logo
+\setvariables [document] [logo=MC_Logo_Symbol_672x668.png]
+
+% Environment
 \environment env-talks
-
-% lsu-math-301d
-% Hilbert space er orthonormal basis
-% Vector spacer basis
-% Hermite polynomial
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
